# cPlus

./: .gitignore  1.cpp  111.cpp  13.cpp  5.cpp  7.cpp  9.cpp  CMakeLists.txt  CMakeLists_Backup.txt  README.md  Work0.h  acctabc.h  bank.cpp  brass.cpp  brass.h  cPlusConfig.h.in  dma.cpp  dma.h  hangman.cpp  placenew1.cpp  queue.h  sayings1.cpp  stone.cpp  stonewt.cpp  stonewt.h  stonewt.h.h  string1.cpp  string1.h  stringbad.cpp  strngbad.h  studentc.h  studenti.h  tabtenn0.h  task.json  test.cpp  test3.cpp  tv.cpp  tv.h  use_stuc.cpp  use_stui.cpp  (+7 more)
CLeaning/: CMakeLists.txt
CLeaning/src/: a.h  header.c  header.h  main.c  main001.cpp  main002.c  main003.cpp  main004.cpp  main005.cpp  main006.cpp  main007.cpp  main007_ut.cpp  main008.cpp  main009.cpp  max.cpp  max.h  max_ut.cpp  readf.cpp  vector.cpp
ConsoleApplication2/: ConsoleApplication2.sln
ConsoleApplication2/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters
ConsoleApplication2/ConsoleApplication1/c and cpp backup/: cmdutils.cpp  config.h
ConsoleApplication2/ConsoleApplication2/: ConsoleApplication2.cpp  ConsoleApplication2.vcxproj  ConsoleApplication2.vcxproj.filters  Header.h  HeaderAb.cpp  HeaderAb.h
ConsoleApplication2/ConsoleApplication3/: ConsoleApplication3.cpp  ConsoleApplication3.vcxproj  ConsoleApplication3.vcxproj.filters  Header.cpp  Header.h
ConsoleApplication2/ConsoleApplication4/: CommonHeader.h  ConsoleApplication4.cpp  ConsoleApplication4.vcxproj  ConsoleApplication4.vcxproj.filters  Header.cpp  Header.h
ConsoleApplication2/ConsoleApplication4/h and cpp/: cmdutils.cpp  cmdutils.h  va_copy.h
ConsoleApplication2/FfmpegConsoleApp/: FfmpegConsoleApp.cpp  FfmpegConsoleApp.vcxproj  FfmpegConsoleApp.vcxproj.filters
ConsoleApplication2/MFCApp1/: MFCApp1.cpp  MFCApp1.h  MFCApp1.rc  MFCApp1.vcxproj  MFCApp1.vcxproj.filters  MFCApp1Dlg.cpp  MFCApp1Dlg.h  resource.h
ConsoleApplication2/PlaySuccess/: PlaySuccess.vcxproj  Source.cpp  scaling_video.cpp
ConsoleApplication2/PlaySuccessII/: PlaySuccessII.vcxproj  PlaySuccessII.vcxproj.filters  playSecondVersion.cpp
ConsoleApplication2/Project1/: Project1.vcxproj  Project1.vcxproj.filters  SuccessPlay.cpp  SuccessSaveVideo.cpp
ConsoleApplication2/TestConsoleApp/: TestConsoleApp.cpp  TestConsoleApp.vcxproj  TestConsoleApp.vcxproj.filters
ConsoleApplication2/Tryffplay/: Tryffplay.vcxproj  Tryffplay.vcxproj.filters  ffplay.cpp
ConsoleApplication2/scaling/: scaling.vcxproj  scaling.vcxproj.filters  scaling_video.cpp
ConsoleApplication2/scalingII/: scalingII.cpp  scalingII.vcxproj  scalingII.vcxproj.filters
Header/: res_path.h
MathFunctions/: CMakeLists.txt  MakeTable.cpp  mysqrt.cpp
Modules/: CheckFuncctionExists.cmake
cmakeLeaning/: CMakeLists.txt  Config.h.in  gtest.cmake  variable.cmake
cmakeLeaning/src/: example.c  example.cpp  example.h  gt.cpp  gt.hpp  main.c  sdlExample.c  sdlExample.cpp
ffmpegLeaning/: CMakeLists.txt
ffmpegLeaning/src/: example.c  main.c  sdlExample.c  success.cpp
rest_file/: 1.cpp  12.cpp  2.cpp  3.cpp  8.cpp  CMakeLists.txt  acctABC.cpp  coordin.h  exc_mean.cpp  newxcp.cpp  queue.cpp  randwalk.cpp  showpt.cpp  stock1.h  stocks.cpp  str1.h  string1.cpp  stringbad.cpp  student.cpp  student1.cpp  test.cpp  test2.cpp  tv.h  use_tv.cpp  vect.h  worker1.cpp
rest_file/src/: 1.cpp  1.h  10.cpp  11.cpp  14.cpp  2.cpp  3.cpp  4.cpp  6.cpp  SALES.cpp  Work0.h  acctabc.h  bank.cpp  base.hpp  brass.h  derived.cpp  derived.hpp  error1.cpp  gtest_sample3.h  main.cpp  main1.cpp  myqueue.h  myqueue_ut.cpp  namesp.cpp  namesp.h  namessp.cpp  queue_ut.cpp  sales.h  sample1.h  sayings1.cpp  sayings2.cpp  stack.cpp  stack.h  stacker.cpp  stone.h  str1.cpp  strfile.cpp  strngbad.h  tabtenn0.cpp  test1.cpp  (+7 more)
sdlLeaning/: CMakeLists.txt
sdlLeaning/src/: normal001.cpp  sdlEx.cpp  sdlEx001.cpp  sdlEx01.cpp
src/: example.cpp  header.cpp  main.cpp  maina.cpp
src/include/: header.h
