project(CLeaning)

#add_executable(CLeaning src/header.h src/main007.cpp src/main007_ut.cpp)
add_executable(CLeaning src/main009.cpp)
#target_link_libraries(CLeaning SDL2 SDL2main avutil avformat avcodec swscale swresample)
#target_link_libraries(CLeaning gtest_main)
#add_test(NAME example_test COMMAND CLeaning)